--- a/public/_assets/scss/layouts/_footer.scss
+++ b/public/_assets/scss/layouts/_footer.scss
@@ -35,4 +35,8 @@
             content: "|";
         }
     }
+
+    @include for-viewport-size(phone) {
+        padding-bottom: var(--spacing-200);
+    }
 }
